# algorithm

./: CMakeLists.txt  main.c
CPractise/: BasicDataStructureTypePractise.c  CPractise.h  ControlStructure.c  GuessAge.c  LeapYear.c  LeapYearPlus.c  PointerAndSource.c
MyArray/: FindeFromArray.c  MaxAndMinScore.c  MyArray.h  MySort.c  RubbitesOfFibonacci.c  TwoDimensional.c
algorithm/chapter1/: ChickenAndRubbites.c  chapter1.h
algorithm/introduction/: introduction.h  maxSubsequenceResult.c
